<resources>
    <string name="app_name">Final Project</string>
    <string name="myShop">My Shop</string>
    <string name="categories">Categories to Discover</string>
    <string name="products">Products to Discover</string>
    <string name="select_categories">What do you want to shop today?</string>
    <string name="select_products">What product are you looking for?</string>
    <string name="category">Category</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="idText"> ID : </string>
    <string name="description">Description:</string>
    <string name="categoryP">Category:</string>
    <string name="john_hardy_women_s_legends_naga_gold_and_silver_dragon_station_chain_bracelet">John Hardy Women\'s Legends Naga Gold and Silver Dragon Station Chain Bracelet</string>
    <string name="quantity">Quantity</string>
    <string name="_695">695</string>
    <string name="money">$</string>
    <string name="id">ID #</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="buy">BUY</string>
    <string name="cart_order">Complete your order</string>
    <string name="confirm_your_order">Confirm your order!</string>
    <string name="item">Item :</string>
    <string name="cart_summary">Cart Summary</string>
    <string name="total">Total:</string>
    <string name="thanks_for_your_order">Thanks for your Order!</string>
    <string name="we_will_send_you_another_email_when_it_is_in_transit">WE WILL SEND YOU ANOTHER EMAIL WHEN IT IS IN TRANSIT</string>
    <string name="stay_with_us_what_do_you_want_to_do">Stay with us! What do you want to do?</string>
    <string name="your_profile">Your Profile</string>
    <string name="cart">Cart</string>
    <string name="my_cart">My Cart</string>
    <string name="product">Product:</string>
    <string name="product_id">Product Id:</string>
    <string name="orders_history">Orders History</string>
    <string name="user_id">User ID:</string>
    <string name="date">Date</string>
    <string name="order_productws">Order Productws</string>
    <string name="orders">Orders</string>
    <string name="price">Price:</string>
    <string name="product_idd">Product ID #</string>
    <string name="name">Name :</string>
    <string name="lastname">Lastname:</string>
    <string name="email">email:</string>
    <string name="city">City:</string>
    <string name="latitude">Latitude:</string>
    <string name="street">Street:</string>

    <string name="longit">Longit</string>
    <string name="number">Number :</string>
    <string name="zip">Zip :</string>
    <string name="phone">Phone:</string>
    <string name="about_the_app">About the App</string>
    <string name="go_to_login">Go to Login</string>
    <string name="credits">Credits:</string>
    <string name="androidstudio">AndroidStudio</string>
    <string name="https_thiscatdoesnotexist_com">https://thiscatdoesnotexist.com/</string>
    <string name="google_maps">Google Maps</string>
    <string name="https_fakestoreapi_com">https://fakestoreapi.com/</string>
    <string name="help_resources">Help Resources:</string>
    <string name="copyright_text">© Copyright Amara Pedroza T. 2022, \n Built with Android Studio</string>
    <string name="resources"><![CDATA[https://www.youtube.com/watch?v=EoJX7h7lGxM https://www.youtube.com/watch?v=53BsyxwSBJk https://guides.codepath.com/android/leveraging-the-gson-library https://www.youtube.com/watch?v=hoK9OOP1KZw https://www.youtube.com/watch?v=zdfbHzBmzk8 https://tutorials.eu/json-parsing-and-how-to-use-gson-in-android/ https://www.youtube.com/watch?v=Sitt4aliSz4 https://www.youtube.com/watch?v=rBQi_7L-Uc8 https://www.tutorialspoint.com/gson/gson_quick_guide.htm https://developer.android.com/kotlin/style-guide https://kotlinlang.org/docs/basic-types.html#string-literals https://www.youtube.com/watch?v=UbP8E6I91NA https://www.youtube.com/watch?v=dB9JOsVx-yY https://www.youtube.com/watch?v=25NXEYeJHAc&t=170s https://stackoverflow.com/questions/22490057/android-okhttp-with-basic-authentication https://howtoprogram.xyz/2016/11/03/basic-authentication-okhttp-example/ https://gist.github.com/namhyun-gu/df668e651fe445a55c836284cfbdb215 https://medium.com/@thoolab/how-to-implement-retrofit-basic-authentication-in-android-kotlin-9f25abe34dda]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_your_orders">All your Orders</string>
    <string name="shop_now">SHOP NOW!</string>
</resources>